revision 1st round

--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -47,33 +47,35 @@ Phone: +49 30 450 529 005;      Fax: +49 30 450 529 902
 **Keywords:** anaphylaxis; epinephrine; glucagon; hypotension; methylene blue; shock
 
 # Introduction
-Anaphylaxis is a potentially life-threatening, primarily mast cell-dependent reaction to most frequently food, drugs, insect venom. Although anaphylaxis remains to be a clinical diagnosis [@Kemp2014], it is highly likely if any of the following 3 criterita are fulfilled: 1) Acute onset of an illness with generalized skin / mucosal involvemt with flushing, hives or pruritus; 2) acute cutaneous, cardiorespiratory or gastrointestinal symptoms after exposure to a likely allegen; c) acute reduction of blood pressure (BP) after exposure to a known allergen [@Sampson2006]. The pathogenesis of anaphylaxis is related to a sudden, systemic, (mostly IgE dependent) degranulation of mast cells or basophils leading to the release of multiple mediators like histamine, tryptase, chymase, platelet-activating factor, prostaglandins, and leukotrienes [@Houser2015].
+Anaphylaxis is a potentially life-threatening, primarily mast cell-dependent reaction to most frequently food, drugs, insect venom. Although anaphylaxis remains to be a clinical diagnosis [@Kemp2014], it is highly likely if any of the following 3 criterita are fulfilled: 1) Acute onset of an illness with generalized skin / mucosal involvemt with flushing, hives or pruritus; 2) acute cutaneous, cardiorespiratory or gastrointestinal symptoms after exposure to a likely allegen; c) acute reduction of blood pressure (BP) after exposure to a known allergen [@Sampson2006]. The definition of anaphylaxis remains controverse [@Lieberman2015]. The pathogenesis of anaphylaxis is related to a sudden, systemic, (mostly IgE dependent) degranulation of mast cells or basophils leading to the release of multiple mediators like histamine, tryptase, chymase, platelet-activating factor, prostaglandins, and leukotrienes [@Houser2015].
 
-By contrast, the term refractory anaphylaxis has not been established yet. For the purpose of this review, we define refractory anaphylaxis as anaphylaxis (meeting the criteria by NIAID/FAAN  [@Sampson2006]) unresponsive to the treatment with at least 2 doses of a minimum 300 µg adrenaline. Unresponsiveness, in this case, is defined as a lack of expected normalization of clinical symptoms (i.e. rapid increase in blood pressure, bronchodilatation, tachycardia).
+By contrast, the definition of refractory anaphylaxis has not been established yet. For the purpose of this review, we define refractory anaphylaxis as anaphylaxis (meeting the criteria by NIAID/FAAN  [@Sampson2006]) unresponsive to the treatment with at least 2 doses of a minimum 300 µg adrenaline. Unresponsiveness, in this case, is defined as a lack of expected normalization of clinical symptoms (i.e. rapid increase in blood pressure, bronchodilatation, tachycardia). Previously authors suggested using the term in cases of persistent severe shock symptoms after 10 minutes of adequate resustitation [@Gouel2016].
 
-It is important to distinguish refractory anaphylaxis from recurrent anaphylaxis. In one case report authors used the term refractory anaphylaxis to describe 6 recurrent episodes of anaphylaxis associated with the monoclonal mast cell activation syndrome, which responded well to intramuscular doses of epinephrine [@Jagdis2014] and were ultimately treated with omalizumab. We did not include such reports into our analysis and suggest to use the term “recurrent” anaphylaxis instead of “refractory” in such cases. 
+It is important to distinguish refractory anaphylaxis (which is unresponsive to treatment) from recurrent anaphylaxis which can be defined as multiple episodes of anaphylaxis over a period of time that responsed to treatment with adrenaline [@Mullins2003]. In one case report authors used the term refractory anaphylaxis to describe 6 recurrent episodes of anaphylaxis associated with the monoclonal mast cell activation syndrome, which responded well to intramuscular doses of epinephrine [@Jagdis2014] and were ultimately treated with omalizumab. We did not include such reports into our analysis and suggest to use the term “recurrent” anaphylaxis instead of “refractory” in such cases. 
 
-The incidence of anaphylaxis is increasing worldwide [@Koplin2011] and was lately estimated to be between 50 and 112 episodes per 100,000 person-years and an estimated prevalence of 0.3% to 5.1% [@TejedorAlonso2015].  It is widely believed to be an underrecognized and undertreated medical emergency [@Fineman2015]. Anaphylaxis in children is in the majority of cases food dependent and most likely less severe than episodes in adulthood [@Braganza2005]. Cases of refractory anaphylaxis are extremely rare. The incidence of refractory anaphylaxis was not investigated earlier and it is estimated (based on our data) to range between 3--5% of all cases of anaphylaxis.
+The incidence of anaphylaxis is increasing worldwide [@Koplin2011] and was lately estimated to be between 50 and 112 episodes per 100,000 person-years and an estimated prevalence of 0.3% to 5.1% [@TejedorAlonso2015].  It is widely believed to be an underrecognized and undertreated medical emergency [@Fineman2015]. Anaphylaxis in children is in the majority of cases food dependent and most likely less severe than episodes in adulthood [@Braganza2005]. Cases of refractory anaphylaxis are extremely rare. The incidence of refractory anaphylaxis was not investigated earlier and we estimate it to range between 3--5% of all cases of anaphylaxis (based on our clinical experience).
 
-Risk factors for anaphylaxis include age, food elicitors (cow's milk and hen's egg) in children and drug-induced anaphylaxis in adults as well as concomitant mastocytosis (or mast cell activation syndromes) [@Worm2013]. Severe anaphylaxis is more likely to be elicited in elderly patients, patients suffering from mastocytosis, and in temporal proximity to vigorous exercise (e.g. jogging) [@Worm2013]. Risk factors for _refractory_ anaphylaxis were not investigated previously. 
+Risk factors for anaphylaxis include age, food elicitors (cow's milk and hen's egg) in children and drug-induced anaphylaxis in adults as well as concomitant mastocytosis (or mast cell activation syndromes) [@Worm2018]. Severe anaphylaxis is more likely to be elicited in elderly patients, patients suffering from mastocytosis, and in temporal proximity to vigorous exercise (e.g. jogging) [@Worm2013]. Risk factors for _refractory_ anaphylaxis were not investigated previously. 
 
 The management algorithms for anaphylaxis are based on consensus expert recommendations and might be incomplete when it comes to reactions that are not responding to the first line therapy. To date, the acute treatment of anaphylaxis is uniquely recommended in the international guidelines and the mainstay of therapy is the early administration of intramuscular (i.m.) adrenaline [@Lazar2017].
 However, an optimal anaphylaxis treatment in a given patient is difficult to study because it is an emergency condition and placebo-controlled studies are limited for ethical reasons. Therefore most of the knowledge regarding the treatment of anaphylaxis is based on expert recommendations which are graded as low-level evidence sources.
 
 In the present analysis, we aimed to evaluate the management and risk factors of refractory anaphylaxis to highlight possible clinical implications for updating current management algorithms.
 
-We performed a database search in the "PubMed" database using the "RISmed"[@rismed] package for R statistical software [@R]. The search terms contained the words "refractory anaphylaxis" in articles published from 1950 till 2017. The search was conducted on 16.11.2017 and returned 150 results. All case reports of patients who experienced an anaphylactic event and did not respond to at least 600 µg of adrenaline were included in this study. Articles in English, Portuguese, French, and Spanish were included in the analysis, one article in Japanese was excluded. Additionally, case reports referenced in the included sources were added. We excluded reviews and articles not containing a case description as well as cases which documented an appropriate response to injected adrenaline. Also, cases describing mast cell activation syndrome and refractory vasoplegia without the definitive diagnosis of anaphylaxis were not included. We finally included `r unique(d$Source) %>% length()` Papers reporting `r d$Author %>% length()` cases of anaphylaxis. The detailed inclusion flowchart is illustrated in Fig \@ref(fig:prismaflow). 
+We performed a database search in the "PubMed" database using the "RISmed"[@rismed] package for R statistical software [@R]. The search terms contained the words "refractory anaphylaxis" in articles published from 1950 till 2017. The search was conducted on 16.11.2017 and returned 151 results. All case reports of patients who experienced an anaphylactic event and did not respond to at least 600 µg of adrenaline were included in this study. Articles in English, Portuguese, French, and Spanish were included in the analysis, one article in Japanese was excluded. Additionally, case reports referenced in the included sources were added. We excluded reviews and articles not containing a case description as well as cases which documented an appropriate response to injected adrenaline. Also, cases describing mast cell activation syndrome and refractory vasoplegia without the definitive diagnosis of anaphylaxis were not included. The detailed inclusion flowchart is illustrated in Fig \@ref(fig:prismaflow). 
 
 We collected information about the elicitors, clinical setting, concomitant diseases, medication, reaction symptoms, therapy and outcomes of the treatment. We used piloted polls to gather the data and all reports were screened once by the same researcher. We investigated which interventions were reported as successful in the treatment of anaphylactic hypotension that was not responding to injected (i.v. or i.m.) adrenaline. Successful and unsuccessful management of anaphylaxis was one of the most important outcomes we evaluated. This information was available in all cases. All of the studies were case reports, therefore, the evidence level was classified as low. The review protocol was not established prior to the review and the review did not undergo preregistration. It is important to mention that as a review of case reports this study did not use control groups to compare outcomes and its statistical validity is therefore limited. 
 
+We finally included `r unique(d$Source) %>% length()` Papers reporting `r d$Author %>% length()` cases of anaphylaxis (Table \@ref(tab:demo))
+
+
 ## Risk factors for refractory anaphylaxis
 
-A major risk factor for refractory anaphylaxis is perioperative anaphylaxis. In `r (d$Situation_gr=="OP") %>% which %>% length()` (`r ((d$Situation_gr=="OP") %>% which %>% length()/length(d[,1])*100) %>% round(1)`%) cases the anaphylactic reaction occurred during a diagnostic or surgical procedure. The most common causes of refractory anaphylaxis based on the analyzed case reports were iatrogenic procedures including anesthesia drugs, aprotinin, and protamine, radiocontrast media (RCM). Surprisingly, no cases of insect venom anaphylaxis were found among these reports (see Table \@ref(tab:demograph)). While the incidence of perioperative anaphylaxis has been reported to be between 1 in 10,000 -- 20,000 anesthesia procedures, it has a relatively high fatality rate of 3 -- 10% of the perioperative fatalities. [@Nag2017]
+A major risk factor for refractory anaphylaxis is perioperative anaphylaxis. In `r (d$Situation_gr=="OP") %>% which %>% length()` (`r ((d$Situation_gr=="OP") %>% which %>% length()/length(d[,1])*100) %>% round(1)`%) cases the anaphylactic reaction occurred during a diagnostic or surgical procedure. The most common causes of refractory anaphylaxis based on the analyzed case reports were iatrogenic procedures including anesthesia drugs, aprotinin, and protamine, radiocontrast media (RCM). Indirectly concomitant treatment with protimne-containing insulins might predispose to refractory anaphylaxis as these patiens have 40 to 50 times greater risk for developing anaphylaxis perioperatively [@Stewart1984; @DrugAllergy2010]. Surprisingly, no cases of insect venom anaphylaxis were found among these reports (see Table \@ref(tab:demograph)). While the incidence of perioperative anaphylaxis has been reported to be between 1 in 10,000 -- 20,000 anesthesia procedures, it has a relatively high fatality rate of 3 -- 10% of the perioperative fatalities. [@Nag2017]
 
+The patomechanisms which are responsible for refractory anaphylaxis are not well understood. There are however theories why extensive therapeutic efforts fail in certain cases. Figure \@ref(fig:pat) summarizes the potential factors contributing to refctorinness of anaphylaxis. These can be divided into patient dependent (e.g. concomitant coronary disease, older age or bronchial hyperresponsiveness) or therapy-dependent (e.g. suboptimal management, concomitant beta blocker use, or idopathic triggers).
 
-An early diagnosis of anaphylaxis during operative procedures can be suggested based on end-tidal CO~2~ collapse, which often is preceding cardiac arrest, even in the absence of any cutaneous manifestations. [@Baumann2009] In such case - treatment with adrenalin should be immediately initiated as delayed adrenaline use has been linked to increased mortality [@Simons2010] and refractoriness to adrenaline [@Fineman2015].
-
-
+An early diagnosis of anaphylaxis during operative procedures can be suggested based on end-tidal CO~2~ collapse [@Gouel2016], which often is preceding cardiac arrest, even in the absence of any cutaneous manifestations [@Baumann2009]. In such case - treatment with adrenalin should be immediately initiated as delayed adrenaline  use has been linked to increased mortality [@Simons2010] and refractoriness to adrenaline [@Fineman2015].
 
 ## Therapy of refractory anaphylaxis
 
@@ -119,7 +121,7 @@ Seedat et al. described a case of anaphylaxis while undergoing a bilateral knee 
 
 One case report described the use of military anti-shock trousers to perform external vasopressin on a patient who received inadvertently high doses of systemic immune therapy allergen [@Bickell1984]. Although this can be hardly available in critical care centers we want to point out this minimally invasive method as a possible alternative measure in achieving normotension.
 
-The European anaphylaxis register includes 18 cases where dopamine was used (mean age `r mean(dopam.anareg$d_age) %>% round(1)`; range `r dopam.anareg$d_age %>%  range() %>% paste0(collapse="--")`). None of these reactions were fatal and `r ((dopam.anareg$d_severity_rm %>% summary())[4] / dopam.anareg$d_severity_rm %>% summary() %>% sum()*100) %>% round(1)`% were Ring and Messmer grade IV. `r ((dopam.anareg$d_elicitor_gr5=="drugs") %>% sum()/length(dopam.anareg$d_elicitor_gr5)*100) %>% round(1)`% of there reactions were elicited by drugs or occured during a medical procedure. Adrenaline was not used in `r ((dopam.anareg$d_522_adren_agg=="no") %>% sum()/length(dopam.anareg$d_elicitor_gr5)*100) %>% round(1)`% 
+<!-- The European anaphylaxis register includes 18 cases where dopamine was used (mean age `r mean(dopam.anareg$d_age) %>% round(1)`; range `r dopam.anareg$d_age %>%  range() %>% paste0(collapse="--")`). None of these reactions were fatal and `r ((dopam.anareg$d_severity_rm %>% summary())[4] / dopam.anareg$d_severity_rm %>% summary() %>% sum()*100) %>% round(1)`% were Ring and Messmer grade IV. `r ((dopam.anareg$d_elicitor_gr5=="drugs") %>% sum()/length(dopam.anareg$d_elicitor_gr5)*100) %>% round(1)`% of there reactions were elicited by drugs or occured during a medical procedure. Adrenaline was not used in `r ((dopam.anareg$d_522_adren_agg=="no") %>% sum()/length(dopam.anareg$d_elicitor_gr5)*100) %>% round(1)`%  -->
 
 ## Glucagon in anaphylaxis with concomitant beta blockers
 
@@ -144,8 +146,7 @@ In the most severe cases, where all pharmacologic attempts fail to alleviate sym
 Life-threatening anaphylactic reactions occur in approximately 1 in 6000 anesthetic procedures and are associated with 5% mortality [@Weiss2015]. ECMO is widely used for the treatment of cardiogenic shock [@Sidebotham2010] and may also be used in cases of anaphylaxis. It is especially helpful where there is refractory anaphylaxis with cardiac or respiratory arrest. Its use may gain time to eliminate the responsible elicitor (metabolize the drug or find the occluded elicitor). One of the reported cases identified the chlorhexidine coated catheter to be responsible for the refractory shock, and after its removal patient responded immediately to therapy. The use of ECMO facilitated the elicitor discovery [@Wang2016]. 
 
 ## Conclusion 
-
-We analyzed case reports from literature and own data from our anaphylaxis registry of refractory anaphylaxis and critically evaluated the undertaken therapeutic approaches. These cases of refractory anaphylaxis were most frequently elicited by drugs and happened during a medical procedure. All patients were treated with adrenaline as a first line therapy, nearly all of them were given oxygen, steroids i.v. and fluid replacement therapy. 
+We analyzed case reports from the literature and critically evaluated the undertaken therapeutic approaches. These cases of refractory anaphylaxis were most frequently elicited by drugs and happened during a medical procedure. All patients were treated with adrenaline as a first line therapy, nearly all of them were given oxygen, steroids i.v. and fluid replacement therapy. 
 
 We highlight therapeutic options that should be evaluated in case of anaphylaxis non-responsive to first-line therapy with adrenaline: methylene blue, vasopressors, glucagon and extracorporeal life support. We suggest a management algorithm for refractory anaphylaxis (see Fig. \@ref(fig:algo)) that is supplementary to the established protocols.
 
@@ -173,23 +174,34 @@ For the future,  measurements [@Wittenberg2017] at a bedside setting may enable 
 
 # Figures and Tables
 
-```{r prismaflow, echo=F,fig.cap="The PRISMA flowchart for included sources"}
+```{r prismaflow, echo=F,fig.cap="The PRISMA flowchart for included sources. The additional 18 papers were included as a result of screening the referenced sources in the initial 151 screened papres. We screened the pubmed database using the search terms 'refractory anaphylaxis' with the help of the RISmed package for R. Only Case reports were included."}
 knitr::include_graphics("../figures/prism_flow.png")
 ```
-
 
 ```{r algo, echo=F,fig.cap="The algorithm for refractory anaphylaxis management"}
 knitr::include_graphics("../figures/algo.png")
 ```
 
+```{r pato, echo=F,fig.cap="The patophyisiology of refractory anaphylaxis. The proposed mechanisms of anaphylaxis reaction non responding to therapy are divided into patient dependent and iatrogenic factors."}
+knitr::include_graphics("../figures/pato.png")
+```
+
+```{r demo }
+table_demo %>% cbind(sex=c("male","female"),.) %>% knitr::kable(
+  caption = "Summary of the refractory anaphylxis cases included into the analysis according to concomitant diseases (arterial hypertension and diabetes (either type I or II) expressed as a fraction of included cases). TTR - median time to reaction after exposure to the suspected allergen expressed in minutes. Age is a mean value across evaluated cases in each group.",
+                            col.names = c("Sex","n","Age","TTR [min]","Hypertension [%]","Diabetes [%]"),
+                            row.names = F,
+                            digits = 1)
+```
+
 ```{r demograph}
-knitr::kable(demogr.tab,col.names = c("Elicitor","No. cases","Age","Male fraction [%]","Surgical intervention [%]"),digits = 1,
-             caption = "Demography of refractory anaphylaxis cases.")
+knitr::kable(demogr.tab,col.names = c("Elicitor","No. cases","Age","Male [%]","Perioperative [%]"),digits = 1,
+             caption = "Refractory anaphylaxis cases broken down according to the elicitor of the reaction. Male - percentage of male cases to all cases ina griven group. Perioperative - fraction of anaphylaxis episode that happened either during surgery or in temporal proximity to a surgical procedure. The eliciting drugs were: cefuroxime, chlorhexidine, protamine, aprotinin, succinylocholine, gelofusine, recuronium, chemotherapy,  amoxicillin, ketokonazole, metamizole")
 ```
 
 ```{r wholeTab}
 knitr::kable(whole.tab,
-             caption = "List of papers and anaphylaxis cases included in the study, summarizing their elicitors, and effective therapy interventions")
+             caption = "List of papers and anaphylaxis cases included in the study, summarizing their elicitors, and effective therapy interventions. Cases where the reaction was fatal and all therapeutic options fialed were indicated with the asterix (*). Other cases resulted with full recovery of the patient. ")
 ```
 
 ```{r tabFatal}
