--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -1,3 +1,95 @@
+@article{Worm2018,
+  doi = {10.1111/all.13380},
+  url = {https://doi.org/10.1111/all.13380},
+  year  = {2018},
+  month = {jan},
+  publisher = {Wiley-Blackwell},
+  author = {Margitta Worm and Wojciech Francuzik and Jean-Marie Renaudin and Maria Beatrice Bilo and Vict{\`{o}}ria Cardona and Kathrin Scherer Hofmeier and Alice K\"{o}hli and Andrea Bauer and George Christoff and Ewa Cichocka-Jarosz and Thomas Hawranek and Jonathan O{\textquotesingle}B Hourihane and Lars Lange and Vera Mahler and Antonella Muraro and Nikolaos G Papadopoulos and Claudia Pf\"{o}hler and Iwona Poziomkowska-G{\k{e}}sicka and Franziska Ruëff and Thomas Spindler and Regina Treudler and Montserrat Fernandez-Rivas and Sabine D\"{o}lle},
+  title = {Factors increasing the risk for a severe reaction in anaphylaxis: An analysis of Data from The European Anaphylaxis Registry},
+  journal = {Allergy}
+}
+@article{Gouel2016,
+  doi = {10.1016/j.lpm.2016.04.002},
+  url = {https://doi.org/10.1016/j.lpm.2016.04.002},
+  year  = {2016},
+  month = {sep},
+  publisher = {Elsevier {BV}},
+  volume = {45},
+  number = {9},
+  pages = {774--783},
+  author = {Aur{\'{e}}lie Gouel-Ch{\'{e}}ron and Adela Harpan and Paul-Michel Mertes and Dan Longrois},
+  title = {Management of anaphylactic shock in the operating room},
+  journal = {La Presse M{\'{e}}dicale}
+}
+
+@article{Gouel,
+  doi = {10.1093/bja/aex260},
+  url = {https://doi.org/10.1093/bja/aex260},
+  year  = {2017},
+  month = {nov},
+  publisher = {Elsevier {BV}},
+  volume = {119},
+  number = {5},
+  pages = {908--917},
+  author = {A. Gouel-Ch{\'{e}}ron and L. de Chaisemartin and F. J\"{o}nsson and P. Nicaise-Roland and V. Granger and A. Sabahov and M-T Guinnepain and S. Chollet-Martin and P. Bruhns and C. Neukirch and D. Longrois},
+  title = {Low end-tidal {CO} 2  as a real-time severity marker of intra-anaesthetic acute hypersensitivity reactions},
+  journal = {British Journal of Anaesthesia}
+}
+@article{Stewart1984,
+  doi = {10.1161/01.cir.70.5.788},
+  url = {https://doi.org/10.1161/01.cir.70.5.788},
+  year  = {1984},
+  month = {nov},
+  publisher = {Ovid Technologies (Wolters Kluwer Health)},
+  volume = {70},
+  number = {5},
+  pages = {788--792},
+  author = {W. J. Stewart and S. M. McSweeney and M. A. Kellett and D. P. Faxon and T. J. Ryan},
+  title = {Increased risk of severe protamine reactions in {NPH} insulin-dependent diabetics undergoing cardiac catheterization},
+  journal = {Circulation}
+}
+
+@article{DrugAllergy2010,
+  doi = {10.1016/j.anai.2010.08.002},
+  url = {https://doi.org/10.1016/j.anai.2010.08.002},
+  year  = {2010},
+  month = {oct},
+  publisher = {Elsevier {BV}},
+  volume = {105},
+  number = {4},
+  pages = {259--273.e78},
+  title = {Drug Allergy: An Updated Practice Parameter},
+  journal = {Annals of Allergy,  Asthma {\&} Immunology}
+}
+
+@article{Mullins2003,
+  doi = {10.1046/j.1365-2222.2003.01671.x},
+  url = {https://doi.org/10.1046/j.1365-2222.2003.01671.x},
+  year  = {2003},
+  month = {aug},
+  publisher = {Wiley-Blackwell},
+  volume = {33},
+  number = {8},
+  pages = {1033--1040},
+  author = {R. J. Mullins},
+  title = {Anaphylaxis: risk factors for recurrence},
+  journal = {Clinical $\less$html{\_}ent glyph="@amp$\mathsemicolon$" ascii="{\&}amp$\mathsemicolon$"/$\greater$ Experimental Allergy}
+}
+
+@article{Lieberman2015,
+  doi = {10.1016/j.anai.2015.07.019},
+  url = {https://doi.org/10.1016/j.anai.2015.07.019},
+  year  = {2015},
+  month = {nov},
+  publisher = {Elsevier {BV}},
+  volume = {115},
+  number = {5},
+  pages = {341--384},
+  author = {Phillip Lieberman and Richard A. Nicklas and Christopher Randolph and John Oppenheimer and David Bernstein and Jonathan Bernstein and Anne Ellis and David B.K. Golden and Paul Greenberger and Steven Kemp and David Khan and Dennis Ledford and Jay Lieberman and Dean Metcalfe and Anna Nowak-Wegrzyn and Scott Sicherer and Dana Wallace and Joann Blessing-Moore and David Lang and Jay M. Portnoy and Diane Schuller and Sheldon Spector and Stephen A. Tilles},
+  title = {Anaphylaxis{\textemdash}a practice parameter update 2015},
+  journal = {Annals of Allergy,  Asthma {\&} Immunology}
+}
+
 @Manual{rismed,
     title = {RISmed: Download Content from NCBI Databases},
     author = {Stephanie Kovalchik},
