changes post 1st rev round + Prof Worm

--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -73,7 +73,7 @@
   pages = {1033--1040},
   author = {R. J. Mullins},
   title = {Anaphylaxis: risk factors for recurrence},
-  journal = {Clinical $\less$html{\_}ent glyph="@amp$\mathsemicolon$" ascii="{\&}amp$\mathsemicolon$"/$\greater$ Experimental Allergy}
+  journal = {Clinical and Experimental Allergy}
 }
 
 @article{Lieberman2015,
@@ -86,7 +86,7 @@
   number = {5},
   pages = {341--384},
   author = {Phillip Lieberman and Richard A. Nicklas and Christopher Randolph and John Oppenheimer and David Bernstein and Jonathan Bernstein and Anne Ellis and David B.K. Golden and Paul Greenberger and Steven Kemp and David Khan and Dennis Ledford and Jay Lieberman and Dean Metcalfe and Anna Nowak-Wegrzyn and Scott Sicherer and Dana Wallace and Joann Blessing-Moore and David Lang and Jay M. Portnoy and Diane Schuller and Sheldon Spector and Stephen A. Tilles},
-  title = {Anaphylaxis{\textemdash}a practice parameter update 2015},
+  title = {Anaphylaxis - a practice parameter update 2015},
   journal = {Annals of Allergy,  Asthma {\&} Immunology}
 }
 
@@ -1967,13 +1967,17 @@ year = {1983}
 }
 
 @article{Lieberman,
-abstract = {These parameters were developed by the Joint Task Force on Practice Parameters, representing the American Academy of Allergy, Asthma and Immunology; the American College of Allergy, Asthma and Immunology; and the Joint Council of Allergy, Asthma and Immunology. The American Academy of Allergy, Asthma and Immunology (AAAAI) and the American College of Allergy, Asthma and Immunology (ACAAI) have jointly accepted responsibility for establishing ''The diagnosis and management of anaphylaxis: an updated practice parameter.'' This is a complete and comprehen-sive document at the current time. The medical environment is a changing environment, and not all recommendations will be appropriate for all patients. Because this document incorporated the efforts of many participants, no single individual, including those who served on the Joint Task force, is authorized to provide an official AAAAI or ACAAI interpretation of these practice parameters. Any request for information about or an interpreta-tion of these practice parameters by the AAAAI or ACAAI should be directed to the Executive Offices of the AAAAI, the ACAAI, and the Joint Council of Allergy, Asthma and Immunology. These parameters are not designed for use by pharmaceutical companies in drug promotion.},
-author = {Lieberman, Phillip and Kemp, Stephen F and Oppenheimer, John and Lang, David M and Bernstein, I Leonard and Nicklas, Richard A and Contributors, Workgroup and Anderson, John A and Bernstein, David I and Bernstein, Jonathan A and Fink, Jordan N and Greenberger, Paul A and Ledford, Dennis K and Li, James and Sheffer, Albert L and Solensky, Roland and Wolf, Bruce L and Blessing-Moore, Joann and Khan, David A and Lee, Rufus E and Portnoy, Jay M and Schuller, Diane E and Spector, Sheldon L and Tilles, Stephen A},
-doi = {10.1016/j.jaci.2005.01.010},
-file = {::},
-mendeley-groups = {Refractory anaphylaxis},
-title = {{The diagnosis and management of anaphylaxis: An updated practice parameter}},
-url = {https://pdfs.semanticscholar.org/ff0c/b81c88a48ecc2087ad9c3d431a50258e6fe7.pdf}
+  doi = {10.1016/j.jaci.2005.01.010},
+  url = {https://doi.org/10.1016/j.jaci.2005.01.010},
+  year  = {2005},
+  month = {mar},
+  publisher = {Elsevier {BV}},
+  volume = {115},
+  number = {3},
+  pages = {S483--S523},
+  author = {P LIEBERMAN and S KEMP and J OPPENHEIMER and D LANG and I BERNSTEIN and R NICKLAS and J ANDERSON and D BERNSTEIN and J BERNSTEIN and J FINK},
+  title = {The diagnosis and management of anaphylaxis: An updated practice parameter},
+  journal = {Journal of Allergy and Clinical Immunology}
 }
 @article{Schummer2004,
 author = {Schummer, Wolfram and Schummer, Claudia and Wippermann, Jens and Fuchs, Juergen},
